<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="digit_keyboard_font">fonts/Lobster.ttf</string>
    <string name="hello_world">Fuck the system!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">School\nLocker</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_log_in">Log in</string>
    <string name="edit_password">password</string>
    <string name="edit_mail">mail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_sign_up2">Sign up!</string>
    <string name="text_view_mail">E-mail</string>
    <string name="text_view_password">Password</string>
    <string name="text_view_confirm">Confirm</string>
    <string name="text_view_first_name">First name</string>
    <string name="text_view_last_name">Last name</string>
    <string name="text_view_сountry">Country</string>
    <string name="text_view_university">University</string>
    <string name="edit_text_mail"></string>
    <string name="edit_text_password"></string>
    <string name="edit_text_university"></string>
    <string name="edit_text_confirm"></string>
    <string name="edit_text_first_name"></string>
    <string name="edit_text_last_name"></string>
    <string name="edit_text_country"></string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="date_begin">Date begin</string>
    <string name="search">Search</string>
    <string name="add_courses_groups"> Add courses and groups</string>
    <string name="books_bar">books_bar</string>
    <string name="edit_text_city"></string>
    <string name="edit_text_date_begin"></string>
    <string name="edit_date_hint">01.01.2010</string>
    <string name="courses">COURSES</string>
    <string name="groups">GROUPS</string>
    <string-array name="menu">
        <item>Home</item>
        <item>Creating course</item>
        <item>Creating group</item>
        <item>Search</item>
        <item>Recent</item>
    </string-array>

    <string name="drower_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>
    <string name="title_activity_log_in">LogInActivity</string>


    <string name="select_group">Select group: </string>
    <string name="name">Name: </string>
    <string name="description">Descriptions: </string>
    <string name="ending_date">Ending date: </string>
    <string name="create_course">Create course</string>
    <string name="create_group">Create group</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
</resources>
