<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zfakgroup.israel.schoollocker.BlankFragment"
    android:orientation="vertical"
    android:baselineAligned="false">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="50dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/country"
            android:id="@+id/textViewCountry"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:layout_marginTop="8dp" />


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/city"
    android:id="@+id/textViewCity"

        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:layout_marginTop="18dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_university"
        android:id="@+id/textView2_University"

        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:layout_marginTop="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:text="@string/date_begin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="18dp"
            android:id="@+id/textViewDateBegin" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">


    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CountryPicker"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text_design"
        android:text="@string/edit_text_country" />



    <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CityPicker"
            android:background="@drawable/edit_text_design"
        android:layout_marginTop="10dp"
        android:text="@string/edit_text_city" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/UniversityPicker"
            android:background="@drawable/edit_text_design"
            android:layout_marginTop="10dp"
            android:text="@string/edit_text_university" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/DateBeginPicker"
            android:background="@drawable/edit_text_design"
            android:layout_marginTop="10dp"
            android:text="@string/edit_text_date_begin" />


    </LinearLayout>
</LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/text_button_color"
        android:textSize="20sp"
        android:id="@+id/btnSearch"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design_green" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/listViewSearchResult"
        android:choiceMode="multipleChoice"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/add_courses_groups"
        android:background="@drawable/button_design_green"
        android:textColor="@color/text_button_color"
        android:textSize="20sp"
        android:id="@+id/btnAddCoursesGroups"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp" />
</LinearLayout>
