<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/appName"
        android:textSize="60sp"
        android:textIsSelectable="true"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editMail"
            android:hint="@string/edit_mail"
            android:gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword"
            android:gravity="center"
            android:hint="@string/edit_password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_log_in"
            android:id="@+id/buttonLogIn" />

    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        android:id="@+id/buttonSignUp"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp" />

</LinearLayout>
