<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_group"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:textColor="@color/text_color"></TextView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:layout_weight="3" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="2"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/text_color"></TextView>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_design"
            android:layout_weight="3"
            android:layout_marginRight="16dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:layout_weight="2"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/text_color"></TextView>

        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/edit_text_design"
            android:layout_weight="3"
            android:layout_marginRight="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_begin"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/text_color"></TextView>

        <!--<DatePicker-->
            <!--android:id="@+id/datePicker"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_gravity="center_horizontal" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ending_date"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text_color"></TextView>

        <!--<DatePicker-->
            <!--android:id="@+id/datePicker2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_gravity="center_horizontal" />-->
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_course"
        android:id="@+id/buttonCreateCourse"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_design_green"
        android:textColor="@color/text_button_color"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />


</LinearLayout>