<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zfakgroup.israel.schoollocker.FragmentSignUp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_mail"
                android:id="@+id/textViewMail"
                android:layout_marginTop="18dp"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_password"
                android:id="@+id/textViewPassword"
                android:layout_marginTop="18dp"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_confirm"
                android:id="@+id/textViewConfirm"
                android:layout_marginTop="18dp"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_first_name"
                android:id="@+id/textViewFirstName"
                android:layout_marginTop="50dp"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_last_name"
                android:id="@+id/textViewLastName"
                android:layout_marginTop="18dp"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_сountry"
                android:id="@+id/textViewCountry"
                android:layout_marginTop="20dp"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_university"
                android:id="@+id/textViewUniversity"
                android:layout_marginTop="18dp"
                android:textColor="@color/text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="6dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:background="@drawable/edit_text_design"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:background="@drawable/edit_text_design"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:background="@drawable/edit_text_design"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:background="@drawable/edit_text_design"
                android:layout_marginTop="40dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText5"
                android:background="@drawable/edit_text_design"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText6"
                android:background="@drawable/edit_text_design"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText7"
                android:background="@drawable/edit_text_design"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up2"
        android:id="@+id/buttonSignUp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="60dp"
        android:background="#ff00524c"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:layout_marginTop="10dp" />
</FrameLayout>
