<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:textColor="@color/text_color"></TextView>

        <EditText
            android:id="@+id/inputGroupName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_design"
            android:layout_marginRight="16dp"
            android:layout_weight="3" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:textColor="@color/text_color"></TextView>

        <EditText
            android:id="@+id/inputGroupDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/edit_text_design"
            android:layout_marginRight="16dp"
            android:layout_weight="3" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:id="@+id/buttonCreateGroup"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_design_green"
        android:textColor="@color/text_button_color"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />

</LinearLayout>